scripts/nullaway/annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8.txt
../annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/lib/json/JSONObject.java:1284: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/lib/json/CDL.java:145: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return toJSONArray(new JSONTokener(string));
        ^
    (see http://t.uber.com/nullaway )
../annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/lib/json/CDL.java:212: error: [NullAway] dereferenced expression ja is @Nullable
        for (int i = 0; i < ja.length(); i += 1) {
                              ^
    (see http://t.uber.com/nullaway )
../annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/model/Element.java:55: error: [NullAway] enhanced-for expression this.attributes is @Nullable
        for (Attribute a : this.attributes) {
                               ^
    (see http://t.uber.com/nullaway )
../annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/model/Element.java:79: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return attributes;
        ^
    (see http://t.uber.com/nullaway )
../annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/view/FProject.java:341: error: [NullAway] dereferenced expression PElement.cbEntities is @Nullable
                    PElement.cbEntities.removeItem(listElements.getModel().getElementAt(index));
                                       ^
    (see http://t.uber.com/nullaway )
../annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/dao/DAO.java:31: error: [NullAway] initializer method does not guarantee @NonNull fields attributeMap (line 27), entityMap (line 28) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DAO() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/generator/PHPObjectOriented.java:115: error: [NullAway] dereferenced expression primary is @Nullable
            for (Attribute a : primary.getAttributes()) {
                                      ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
8 errors
